<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="hello">Hello World, EX06_10</string>
  <string name="app_name">大明原创闹钟</string>
  <string name="str_button1">设置闹钟</string>
  <string name="str_button2">删除闹钟</string>
  <string name="str_title2">重复响起的闹钟</string>
  <string name="str_title3">大明闹钟一</string>
  <string name="str_title4">大明闹钟二</string>
  <string name="str_default">目前无设置</string>
  <string name="str_text1">开始时间</string>
  <string name="str_text2">重复响起的闹钟</string>
  <string name="str_text3">秒</string>
</resources>
