<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/layout1"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/other"
>
  <DigitalClock
    android:id="@+id/dClock"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="40sp"
    android:textColor="@drawable/blue"
    android:layout_x="70px"
    android:layout_y="32px"
  >
  </DigitalClock>
	  <TextView
	    android:id="@+id/text1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/str_title3"
	    android:textSize="20sp"
	    android:textColor="@drawable/black"
	    android:layout_x="10px"
	    android:layout_y="104px"
	  >
	  </TextView>
	  <Button
	    android:id="@+id/mButton1"
	    android:layout_width="wrap_content"
	    android:layout_height="40px"
	    android:text="@string/str_button1"
	    android:textColor="@drawable/black"
	    android:textSize="18sp"
	    android:layout_x="190px"
	    android:layout_y="102px"
	  >
      </Button>
      
	    <TextView
		    android:id="@+id/setTime1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_default"
		    android:textColor="@drawable/red"
		    android:textSize="16sp"
		    android:layout_x="10px"
		    android:layout_y="149px"
	  >
	  </TextView>
	  <Button
		    android:id="@+id/mButton2"
		    android:layout_width="wrap_content"
		    android:layout_height="40px"
		    android:text="@string/str_button2"
		    android:textColor="@drawable/black"
		    android:textSize="18sp"
		    android:layout_x="190px"
		    android:layout_y="142px"
	  >
	  </Button>
	  
	  <TextView
	    android:id="@+id/text5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/str_title4"
	    android:textSize="20sp"
	    android:textColor="@drawable/black"
	    android:layout_x="10px"
	    android:layout_y="216px"
	  >
	  </TextView>
	  <Button
	    android:id="@+id/mButton5"
	    android:layout_width="wrap_content"
	    android:layout_height="40px"
	    android:text="@string/str_button1"
	    android:textColor="@drawable/black"
	    android:textSize="18sp"
	    android:layout_x="190px"
	    android:layout_y="212px"
	  >
      </Button>
      
	    <TextView
		    android:id="@+id/setTime5"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_default"
		    android:textColor="@drawable/red"
		    android:textSize="16sp"
		    android:layout_x="10px"
		    android:layout_y="259px"
	  >
	  </TextView>
	  <Button
		    android:id="@+id/mButton6"
		    android:layout_width="wrap_content"
		    android:layout_height="40px"
		    android:text="@string/str_button2"
		    android:textColor="@drawable/black"
		    android:textSize="18sp"
		    android:layout_x="190px"
		    android:layout_y="252px"
	  >
	  </Button>
	  
	  <TextView
		    android:id="@+id/text2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_title2"
		    android:textSize="20sp"
		    android:textColor="@drawable/black"
		    android:layout_x="10px"
		    android:layout_y="326px"
	  >
	  </TextView>
	  <Button
		    android:id="@+id/mButton3"
		    android:layout_width="wrap_content"
		    android:layout_height="40px"
		    android:text="@string/str_button1"
		    android:textColor="@drawable/black"
		    android:textSize="18sp"
		    android:layout_x="190px"
		    android:layout_y="322px"
	  >
	  </Button>
	  
	  <TextView
		    android:id="@+id/setTime2"
		    android:layout_width="170px"
		    android:layout_height="wrap_content"
		    android:text="@string/str_default"
		    android:textColor="@drawable/red"
		    android:textSize="16sp"
		    android:layout_x="10px"
		    android:layout_y="369px"
	  >
      </TextView>
	  <Button
		    android:id="@+id/mButton4"
		    android:layout_width="wrap_content"
		    android:layout_height="40px"
		    android:text="@string/str_button2"
		    android:textColor="@drawable/black"
		    android:textSize="18sp"
		    android:layout_x="190px"
		    android:layout_y="362px"
	  >
	  </Button>
  
</AbsoluteLayout>